Fix Json Format

--- a/gpt4_random_search.ipynb
+++ b/gpt4_random_search.ipynb
@@ -2174,8 +2174,8 @@
     "    plt.xlabel('Iteration', fontsize=16)\n",
     "    plt.ylabel('Probability of token \"Sure\"', fontsize=14)\n",
     "    plt.gca().set_yticklabels(['{:,.0%}'.format(x) for x in plt.gca().get_yticks()])\n",
-    "    if not os.path.exists("plots"):\n",
-    "        os.makedirs("plots")\n",
+    "    if not os.path.exists(\"plots\"):\n",
+    "        os.makedirs(\"plots\")\n",
     "    plt.savefig(f'plots/random_search_{i_msg}.pdf', bbox_inches='tight')\n",
     "    plt.show()"
    ]
