Suffix, not prefix

--- a/gpt4_random_search.ipynb
+++ b/gpt4_random_search.ipynb
@@ -2148,7 +2148,7 @@
     "for i_msg, orig_msg in enumerate(messages):\n",
     "    random.seed(1)\n",
     "    best_adv = adv = '__________'  \n",
-    "    msg = adv + orig_msg\n",
+    "    msg = orig_msg + adv\n",
     "    best_logprob = -999\n",
     "    best_logprobs = []\n",
     "    n_symbols_to_change = 1  \n",
